fixed horizontal scrollbar appearing when not asked for

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -69,6 +69,7 @@ body {
   background: var(--bg-color);
   font-family: "Roboto Mono";
   color: var(--main-color);
+  overflow-x: hidden;
 }
 
 html { overflow-y: scroll; }
